Fixed code flow for ContextManagementHandler, ContextManagementVerticle, ContextDomain and ContextStream