@@ -1,9 +1,12 @@
 package org.hyperagents.yggdrasil.context;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import org.apache.commons.configuration.ConfigurationException;
@@ -19,11 +22,9 @@ import org.eclipse.rdf4j.repository.sail.SailRepository;
 import org.eclipse.rdf4j.sail.memory.MemoryStore;
 import org.hyperagents.yggdrasil.auth.model.CASHMERE;
 import org.hyperagents.yggdrasil.context.http.Utils;
-import org.hyperagents.yggdrasil.model.interfaces.ContextDomainModel;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.streamreasoning.rsp4j.api.engine.config.EngineConfiguration;
-import org.streamreasoning.rsp4j.api.querying.ContinuousQuery;
 import org.streamreasoning.rsp4j.api.sds.SDSConfiguration;
 import org.streamreasoning.rsp4j.api.stream.data.DataStream;
 import org.streamreasoning.rsp4j.csparql2.engine.CSPARQLEngine;
@@ -48,18 +49,16 @@ public class ContextDomain {
     // ContextDomain configuration
     private String contextDomainURI;
 
-    // ContextDomain content stream of the ContextAssertion updates
-    private List<String> assertionStreamURIs = new ArrayList<>();
-    private List<LocalContextStream> assertionStreams = new ArrayList<>();
+    // List of ContextStreams that are levereged in Context Domain Membership rules
+    private List<ContextStream> contextStreams = new ArrayList<>();
 
-    // Query engine configuration and membership rule query
-    private String membershipRuleQueryURI;
-    private String engineConfigURI;
+    // Query engine configuration and membership rule queries
+    private String engineConfigURL;
     private CSPARQLEngine membershipRuleQueryEngine;
-    private List<ContinuousQuery> membershipRuleQuery;
     
-    private DataStream<Graph> membershipRuleQueryResultStream;
-
+    private final List<String> membershipRuleQueryURLs;
+    private final Map<String, JenaContinuousQueryExecution> membershipRuleQueries = new HashMap<>();
+    
     // RDF store for the graph denoting the ContextDomainGroup memberships
     private SailRepository cdgMembershipRepo;
 
@@ -69,74 +68,65 @@ public class ContextDomain {
      * @param contextEntityURI: the URI of the ContextEntity playing the object role in the ContextAssertion
      * @param assertionStreamURI: the URI of the RDF stream where the updates of the ContextAssertion are published
      */
-    public ContextDomain(String contextDomainURI, String engineConfigURI,
-                        List<String> membershipRuleQueryURI, List<String> assertionStreamURIs) {
+    public ContextDomain(String contextDomainURI, String engineConfigURL,
+                        List<String> membershipRuleQueryURLs, List<ContextStream> contextStreams) {
         // set the domain URI
         this.contextDomainURI = contextDomainURI;
 
+        // set the URI of the RSPQL query engine configuration
+        this.engineConfigURL = engineConfigURL;
         
         // set the URI of the RSPQL query that infers the membership of ContextEntities to the ContextDomainGroup
-        this.membershipRuleQueryURI = membershipRuleQueryURI;
+        this.membershipRuleQueryURLs = membershipRuleQueryURLs;
 
         // Set up the RDF store for the named graphs denoting the ContextDomainGroup memberships
         // We set it up as a SailRepository over an in-memory store, as we do not need to persist the membership information for the time being.
         this.cdgMembershipRepo = new SailRepository(new MemoryStore());
 
-
-        // set the URI of the RSPQL query engine configuration
-        this.engineConfigURI = engineConfigURI;
-        
         try {
             initEngine();
-        } catch (MalformedURLException e) {
-            System.err.println("Error while initializing the RSPQL query engine for the ContextDomain " + contextDomainURI);
-            e.printStackTrace();
-        } catch (ConfigurationException e) {
-            System.err.println("Error while initializing the RSPQL query engine for the ContextDomain " + contextDomainURI);
-            e.printStackTrace();
+        } catch (MalformedURLException | ConfigurationException | URISyntaxException e) {
+            LOGGER.error("Error while initializing the RSPQL query engine for the ContextDomain " + contextDomainURI + ": " + e.getMessage());
         }
     }
 
-    private String getStreamBaseURI() {
-        return contextManagementEndpoint + "/streams";
-    }   
 
-    private String getDomainsBaseURI() {
-        return contextManagementEndpoint + "/domains";
-    }
-
-    private void initEngine() throws MalformedURLException, ConfigurationException {
+    private void initEngine() throws MalformedURLException, ConfigurationException, URISyntaxException {
         // get the content of the engineConfigURI (a .properties file path) as an absolute path
-        String configFilePath = new URL(engineConfigURI).getPath();
+        String configFilePath = new URI(engineConfigURL).toURL().getPath();
         SDSConfiguration config = new SDSConfiguration(configFilePath);
 
         LOGGER.info("Loading the RSPQL query engine configuration from " + configFilePath);
-        EngineConfiguration ec = new EngineConfiguration(engineConfigURI);
+        EngineConfiguration ec = new EngineConfiguration(engineConfigURL);
 
         // Instantiate the RSPQL query engine
         this.membershipRuleQueryEngine = new CSPARQLEngine(0, ec);
 
-        // register the assertion stream with the engine
-        DataStream<Graph> engineRegisteredStream = this.membershipRuleQueryEngine.register(this.assertionStream);
-        this.assertionStream.setWritableStream(engineRegisteredStream);
+        // register the ContextStreams with the engine
+        for (ContextStream ctxStream : contextStreams) {
+            var registeredStream = this.membershipRuleQueryEngine.register(ctxStream.getDataStream());
+            ctxStream.setWritableStream(registeredStream);
+        }
         
-        // register the membership rule query with the engine
-        JenaContinuousQueryExecution cqe = (JenaContinuousQueryExecution)membershipRuleQueryEngine.register(Utils.parseRSPQLQuery(this.membershipRuleQueryURI), config);
-        ContinuousQuery query = cqe.query();
-        query.setConstruct();
-        cqe.addQueryFormatter(ResponseFormatterFactory.getConstructResponseSysOutFormatter("Turtle", false));
+        // register all the membership rule queries with the engine and set all of them to write their membership results to the CDG membership repository
+        for (String queryURL : membershipRuleQueryURLs) {
+            JenaContinuousQueryExecution cqe = (JenaContinuousQueryExecution)membershipRuleQueryEngine.register(Utils.parseRSPQLQuery(queryURL), config);
+            var query = cqe.query();
+            query.setConstruct();
+            cqe.addQueryFormatter(ResponseFormatterFactory.getConstructResponseSysOutFormatter("Turtle", false));
+            
+            // keep a record of the query execution object
+            membershipRuleQueries.put(queryURL, cqe);
 
-        // get the result stream of the CONSTRUCT query and create a consumer that will push the results to the CDG membership repository
-        this.membershipRuleQueryResultStream = (DataStream<Graph>)cqe.outstream();
-        this.membershipRuleQueryResultStream.addConsumer((g, t) -> updateMembershipConsumer(g, t));
-
-        // Start the LocatedAt context stream - TODO: this will have to be redone once a web-based stream generator is implemented
-        this.assertionStream.start();
+            // get the result stream of the CONSTRUCT query and create a consumer that will push the results to the CDG membership repository
+            DataStream<Graph> queryResultStream = (DataStream<Graph>)cqe.outstream();
+            queryResultStream.addConsumer((g, t) -> updateMembershipConsumer(g, t));
+        }
     }
 
     private void updateMembershipConsumer(Graph g, long t) {
         // Add the contents of the graph g to the CDG membership repository
-        // The content will always be a single triple, with the subject being the URI of the agent and 
+        // The content will always be a single triple, with the subject being the URI of the agent/resource and 
         // the object being the URI of the ContextDomainGroup. The predicate is always cashmere:memberIn.
         
         // LOGGER.info("Received the result of the membership rule query for the ContextDomain " + contextDomainURI + " at time " + t);
@@ -222,26 +212,4 @@ public class ContextDomain {
         return contextDomainGroupURI.replace("/group", "");
     }
 
-    public static ContextDomain fromModel(ContextDomainModel contextDomainModel) {
-        String contextDomainURI = contextDomainModel.getDomainUri();
-        List<String> membershipRuleURLs = contextDomainModel.getMembershipRules();
-        String engineConfigURL = contextDomainModel.getEngineConfigUrl();
-        List<String> streams = contextDomainModel.getStreams();
-        
-
-        // if a stream URI is provided, set it
-        Optional<String> assertionStreamURI = Optional.ofNullable(contextDomainConfig.getString("stream")); 
-        String ruleURI = contextDomainConfig.getString("rule");
-
-        // if a local stream generator class is provided, set it
-        Optional<String> streamGeneratorClass = Optional.ofNullable(contextDomainConfig.getString("generatorClass"));
-        
-
-        // create the ContextDomain object and add it to the contextDomains map
-        ContextDomain contextDomain = new ContextDomain(serviceURI, contextAssertionURI, contextEntityURI, 
-                                                        assertionStreamURI, streamGeneratorClass,
-                                                        ruleURI, engineConfigURI);
-
-        return contextDomain;
-    }
 }
